<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:padding="2dp"
            app:srcCompat="@drawable/desktopicon" />

        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/tvMainTitle"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#456d89"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivMon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:padding="35dp"
                app:srcCompat="@drawable/videocameracompact" />

            <TextView
                android:id="@+id/tvMonTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/tvMonTitle"
                android:textSize="20dp"
                android:textColor="#456d89"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivComp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:padding="35dp"
                app:srcCompat="@drawable/water" />

            <TextView
                android:id="@+id/tvCompTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/tvCompTitle"
                android:textColor="#456d89"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:padding="35dp"
                app:srcCompat="@drawable/calculator1" />

            <TextView
                android:id="@+id/tvCalTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/tvCalTitle"
                android:textColor="#456d89"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSetIP"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:padding="35dp"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/tvSetIPTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="#456d89"
                android:text="@string/tvSetIPTitle"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>